# yi-back-end

./: .env.example  .gitignore  CLAUDE.md  app.py  config.py  deploy.sh  pyproject.toml
routers/: __init__.py  admin.py  almanac.py  auth.py  bazi.py  face.py  invite.py  liuyao.py  lottery.py  meihua.py  member.py  palm.py  payment.py  points.py  ziwei.py
services/: __init__.py  admin_db.py  admin_service.py  ai_errors.py  almanac.py  auth_db.py  auth_password.py  auth_service.py  deepseek_client.py  email_service.py  face_extractor.py  image_utils.py  liuyao_data.py  lottery_data.py  lottery_service.py  meihua_data.py  openai_factory.py  palm_extractor.py  points_db.py  points_service.py  prompts.py  redis_client.py  vision_client.py
utils/: __init__.py  lunar.py
